fixed card image spacing by adding line 88-90 on style.css

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -10,7 +10,6 @@ aside {
   padding: 20px;
   min-height: 80%;
   border-right: solid #2e3844 3px;
-  
 }
 
 h1 {
@@ -45,10 +44,6 @@ nav ul {
 ul li a {
   color: white;
 }
-a {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 1.5rem;
-}
 
 #about-me {
   border-top: solid #2e3844 3px;
@@ -59,84 +54,6 @@ a {
   display: flex;
   flex-direction: row;
 }
-.cards {
-  flex: 1 1 33%;
-  box-sizing: border-box;
-  border: solid #548c89 3px;
-  width: 33%;
-}
-.card prio {
-  flex: 2 1 391px;
-  max-width: 391px;
-  box-sizing: border-box;
-  border: solid #548c89 3px;
-}
-.contact-me {
-  display: flex;
-  list-style-type: none;
-  justify-content: space-around;
-  color: #548c89;
-  text-decoration: underline;
-}
-.flex-container {
-  display: flex;
-  flex-wrap: wrap;
-}
-.info-me {
-  display: block;
-}
-
-.main-header {
-  background: linear-gradient(#2e3844, #548c89);
-  color: white;
-}
-
-.main-header h1 {
-  text-align: center;
-}
-
-.project {
-  flex: 1 1 100%;
-  min-height: 200px;
-  min-width: 100%;
-}
-
-.project img {
-  height: 225px;
-  width: 300px;
-  position: relative;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-}
-
-.project-main {
-  flex: 2 1 100%;
-  min-height: 200px;
-  min-width: 500px;
-  display: inline-block;
-}
-.project-main img {
-  height: 225px;
-  width: 300px;
-  position: relative;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-}
-.project-main header {
-  text-align: center;
-}
-
-.work-head {
-  border-right: solid #2e3844 5px;
-  padding-right: 5%;
-  min-height: 100%;
-  margin: auto, 5%;
-}
-
 .background-head {
   display: flex;
   min-height: 500px;
@@ -154,6 +71,64 @@ a {
   background-color: #2e3844;
   color: #548c89;
   font-size: 2rem;
+}
+.cards {
+  /* flex: 1 1 334px; */
+  box-sizing: border-box;
+  border: solid #548c89 3px;
+  max-width: 391px;
+  padding: 1%;
+  margin: 1% 3%;
+}
+.cards p {
+  background-color: #548c89;
+  color: #2e3844;
+  text-decoration: underline;
+}
+.cards a img {
+  max-width: 340px;
+}
+.contact-me {
+  display: flex;
+  list-style-type: none;
+  color: #548c89;
+  text-decoration: underline;
+  align-items: center;
+}
+.contact-me li {
+}
+
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.flex-container p {
+  text-align: center;
+}
+.info-me {
+  flex: 1;
+  background-color: white;
+  padding: 20px;
+  min-height: 20%;
+  border-right: solid #2e3844 3px;
+  display: flex;
+  flex-direction: row;
+}
+
+.main-header {
+  background: linear-gradient(#2e3844, #548c89);
+  color: white;
+}
+
+.main-header h1 {
+  text-align: center;
+}
+.work-head {
+  border-right: solid #2e3844 5px;
+  padding-right: 5%;
+  min-height: 100%;
+  margin: auto, 5%;
 }
 
 @media screen and (max-width: 390px) {
